# hangsha/src/main/kotlin/com/team1/hangsha/user/controller/AuthController.kt
@@ -5,8 +5,8 @@ import com.team1.hangsha.user.dto.LoginResponse
 import com.team1.hangsha.user.dto.RegisterRequest
 import com.team1.hangsha.user.dto.RegisterResponse
 import com.team1.hangsha.user.dto.RefreshResponse
-import com.team1.hangsha.user.dto.OAuthExchangeRequest
-import com.team1.hangsha.user.dto.OAuthExchangeResponse
+//import com.team1.hangsha.user.dto.OAuthExchangeRequest
+//import com.team1.hangsha.user.dto.OAuthExchangeResponse
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
@@ -68,9 +68,9 @@ class AuthController(
             .build()
     }
 
-    @PostMapping("/oauth/exchange")
-    fun oauthExchange(@RequestBody req: OAuthExchangeRequest): ResponseEntity<OAuthExchangeResponse> {
-        val access = userService.exchangeOAuthCodeForAccessToken(req.code)
-        return ResponseEntity.ok(OAuthExchangeResponse(accessToken = access))
-    }
+//    @PostMapping("/oauth/exchange")
+//    fun oauthExchange(@RequestBody req: OAuthExchangeRequest): ResponseEntity<OAuthExchangeResponse> {
+//        val access = userService.exchangeOAuthCodeForAccessToken(req.code)
+//        return ResponseEntity.ok(OAuthExchangeResponse(accessToken = access))
+//    }
 }
