# hangsha/src/main/kotlin/com/team1/hangsha/user/dto/OAuthExchangeResponse.kt
@@ -1,5 +1,5 @@
-package com.team1.hangsha.user.dto
-
-data class OAuthExchangeResponse(
-    val accessToken: String
-)
+//package com.team1.hangsha.user.dto
+//
+//data class OAuthExchangeResponse(
+//    val accessToken: String
+//)
